# outbe-chain

./: .dockerignore  .env.example  .gitignore  .gitmodules  .goreleaser.yaml  CHANGELOG.md  CITADEL_AUDIT_metadosis.md  CLAUDE.md  CONTEXT.md  Cargo.toml  Dockerfile  Dockerfile.reproducible  Makefile  NAMING.md  README.md  _typos.toml  ape-config.yaml  audit.toml  cog.toml  compressed_entities_concept_v6_proposed_10-07-2026.md  compressed_entities_v6_decision_map_10-07-2026.md  deny.toml  deploy-oft.yml  docker-compose.yml  impl_log.md  implementation_readiness_final.md  mise.toml  pytest.ini  test_log.md  whitepaper.md  whitepaper_vs_code.md
crates/blockchain/consensus/: Cargo.toml
crates/blockchain/consensus/src/: ancestry_readiness.rs  block.rs  bls.rs  cli.rs  committee_provider.rs  config.rs  digest.rs  dkg.rs  dkg_manager.rs  epoch_registry.rs  epoch_subchannels.rs  forfeit.rs  hybrid.rs  lib.rs  marshal_resolver_p2p_tests.rs  marshal_tests.rs  marshal_types.rs  metrics.rs  missed_proposers.rs  network_identity.rs  participation.rs  reporter.rs  scheme_provider.rs  telemetry_label_tests.rs  test_faults.rs  test_fixtures.rs  test_harness.rs  timing.rs  vrf_safety.rs
crates/blockchain/consensus/tests/: half_c_parlia.rs  handler_tests.rs  namespace_singleton.rs  proof_codec.rs  proof_codec_compat.rs  proof_codec_proptest.rs  proof_fingerprint.rs  proof_helper_location.rs  proof_no_cycle.rs  proof_seed_message_vector.rs  proof_seed_namespace.rs  proof_store.rs  proof_verifier.rs  proof_verifier_cluster.rs  proof_verifier_smoke.rs  recover_proof_contract.rs  reporter_fanout.rs  resolver.rs
crates/blockchain/engine/: Cargo.toml
crates/blockchain/engine/src/: args.rs  bridge.rs  ce_finalizer.rs  ce_recovery.rs  follow_transport.rs  lib.rs  marshal_update_reporter.rs  stack.rs  stack_tests.rs  tee_bootstrap.rs  validators.rs
crates/blockchain/evm/: Cargo.toml
crates/blockchain/evm/src/: begin_block_precompile.rs  builder.rs  config.rs  debug_subcall.rs  executor.rs  factory.rs  failure_receipt.rs  handlers.rs  lib.rs  precompiles.rs  sub_call.rs  upgrade_handlers.rs
crates/blockchain/evm/tests/: artifact_lookup.rs  call_trampoline_full_block_diff.rs  chain_id_install.rs  compressed_scope_wiring.rs  e2e_system_tx.rs  genesis.rs  halt_mapping.rs  ordering_contract.rs  outbe_precompile_registration.rs  phase1_atomicity.rs  phase1_reorder.rs  phase1_reorg.rs  phase1_safety_verification.rs  reentrancy_stack.rs  spike_calc_subcall_gas_proptest.rs  sub_call_eoa_empty.rs  sub_call_happy.rs  sub_call_msg_sender.rs  sub_call_outbe_precompile.rs  sub_call_revert.rs  sub_call_static_write_halt.rs  subcall_gas_meter_parity.rs  system_tx_layout.rs
crates/blockchain/node/: Cargo.toml
crates/blockchain/node/src/: compressed_storage.rs  consensus.rs  engine.rs  lib.rs  node.rs  payload_builder.rs  projection.rs
crates/blockchain/node/tests/: consensus_stateless.rs  fee_history_system_gas.rs  predeploys.rs  projection_startup.rs
crates/blockchain/primitives/: Cargo.toml  README.md
crates/blockchain/primitives/fuzz/: Cargo.toml
crates/blockchain/primitives/src/: accounting_progress.rs  addresses.rs  block.rs  chain.rs  consensus.rs  consensus_metadata.rs  consensus_p2p.rs  crypto.rs  dispatch.rs  erc.rs  error.rs  governance_journal.rs  header.rs  hook_events.rs  lib.rs  participation.rs  payload.rs  projection.rs  protocol_schedule.rs  reshare_artifact.rs  signer.rs  slashing_journal.rs  system_tx.rs  tee_bootstrap.rs  time.rs  units.rs  validators.rs  zero_fee.rs
crates/blockchain/primitives/tests/: consensus_metadata.rs  direct_set_code_unsupported.rs  protocol_schedule.rs  storage_static_flag.rs  storage_static_gates.rs  trybuild.rs
crates/blockchain/rpc/: Cargo.toml
crates/blockchain/rpc/src/: api.rs  lib.rs  server.rs  test_support.rs
crates/blockchain/rpc/tests/: precompile_reads.rs
crates/blockchain/txpool/: Cargo.toml  README.md
crates/blockchain/txpool/src/: lib.rs
crates/core/agentreward/: Cargo.toml
crates/core/agentreward/src/: distribution.rs  lib.rs  precompile.rs  runtime.rs  schema.rs  tests.rs
crates/core/common/: Cargo.toml
crates/core/common/src/: lib.rs  pow.rs  tests.rs  worldwideday.rs
crates/core/compressed-entities/: Cargo.toml
crates/core/compressed-entities/benches/: adr007.rs  adr008.rs  adr009.rs
crates/core/compressed-entities/proto/: compressed_entities.proto
crates/core/compressed-entities/src/: api.rs  bench_support.rs  collection.rs  commitment.rs  errors.rs  lib.rs  lifecycle.rs  persistence.rs  proof.rs  protobuf.rs  replay.rs  runtime.rs  schema.rs  sharding.rs  staging.rs  state.rs  tests.rs  tree_manager.rs  tree_service.rs
crates/core/compressed-entities/vectors/: adr009-sharding.json  adr010-catalog.json
crates/core/credisfactory/: Cargo.toml
crates/core/credisfactory/src/: errors.rs  lib.rs  lifecycle.rs  precompile.rs  runtime.rs  schema.rs  sol_ext.rs
crates/core/desis/: Cargo.toml
crates/core/desis/src/: api.rs  constants.rs  errors.rs  hooks.rs  lib.rs  precompile.rs  runtime.rs  schema.rs  sol_ext.rs  state.rs  tests.rs
crates/core/e2e/: Cargo.toml  README.md
crates/core/e2e/src/: lib.rs
crates/core/e2e/tests/: governance_lifecycle.rs  governance_vote_flow.rs  update_flow_spec.rs  update_spec_expected_fail.rs  wwd_auction_clearing.rs  wwd_lysis_nod_gratis.rs
crates/core/gem/: Cargo.toml
crates/core/gem/src/: api.rs  constants.rs  errors.rs  events.rs  (+7 more)
crates/core/gemfactory/: Cargo.toml
crates/core/governance/: Cargo.toml  README.md
crates/core/gratis/: Cargo.toml
crates/core/gratisfactory/: Cargo.toml
crates/core/gratispool/: Cargo.toml
crates/core/intexfactory/: Cargo.toml
crates/core/lysis/: Cargo.toml
crates/core/metadosis/: Cargo.toml  README.md
crates/core/nod/: Cargo.toml
crates/core/nodfactory/: Cargo.toml
crates/core/promis/: Cargo.toml
crates/core/promisfactory/: Cargo.toml
crates/core/tribute/: Cargo.toml
crates/core/tributefactory/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/release/: sgx.rs
xtask/tests/: sgx_release.rs
(+1489 files in other folders)
