[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
clap.workspace = true
eyre.workspace = true
filetime.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time = { workspace = true, features = ["formatting"] }
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
