[package]
name = "outbe-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

# Engine layer that glues pure `outbe-consensus` (Simplex/hybrid/DKG/proof) with
# `outbe-evm` (execution), `outbe-validatorset` (storage facade), and
# `outbe-node` (Reth node assembly). Owns the stack startup, the consensus
# application handler tests, the validators ValidatorSet reader, and the peer
# manager actor. Anything that needs both consensus and EVM lives here.

[features]
default = []

[dependencies]
# Internal
outbe-consensus.workspace = true
outbe-node.workspace = true
outbe-primitives.workspace = true
outbe-validatorset.workspace = true
outbe-teeregistry.workspace = true
outbe-tee.workspace = true

# Commonware
commonware-actor.workspace = true
commonware-broadcast.workspace = true
commonware-consensus.workspace = true
commonware-cryptography.workspace = true
commonware-p2p.workspace = true
commonware-runtime.workspace = true
commonware-storage.workspace = true
commonware-codec.workspace = true
commonware-utils.workspace = true
commonware-math.workspace = true
commonware-parallel.workspace = true

# Reth
reth-ethereum = { workspace = true, features = ["node", "node-api", "storage-api", "network"] }
reth-node-builder.workspace = true
reth-provider.workspace = true
reth-transaction-pool.workspace = true
reth-primitives-traits.workspace = true

# Alloy
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-sol-types.workspace = true
bytes.workspace = true

# Crypto

# Utilities
clap.workspace = true
eyre.workspace = true
futures.workspace = true
hex.workspace = true
serde.workspace = true
tokio.workspace = true
rand_core.workspace = true
tracing.workspace = true
metrics.workspace = true

[dev-dependencies]
outbe-consensus = { workspace = true, features = ["test-utils"] }
commonware-resolver = { git = "https://github.com/commonwarexyz/monorepo", tag = "v2026.5.0" }
tempfile.workspace = true
tracing-subscriber = { version = "0.3", features = ["fmt"] }
metrics-util = "0.20"
proptest.workspace = true

[package.metadata.cargo-machete]
ignored = ["metrics"]

[lints]
workspace = true
