[package]
name = "outbe-evm"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
# Internal
outbe-primitives.workspace = true
outbe-offchain-data.workspace = true
outbe-gratis.workspace = true
outbe-gratisfactory.workspace = true
outbe-gratispool.workspace = true
outbe-promis.workspace = true
outbe-promisfactory.workspace = true
outbe-tribute.workspace = true
outbe-nod.workspace = true
outbe-nodfactory.workspace = true
outbe-gem.workspace = true
outbe-gemfactory.workspace = true
outbe-intex.workspace = true
outbe-intexfactory.workspace = true
outbe-desis.workspace = true
outbe-vaultprovider.workspace = true
outbe-credis.workspace = true
outbe-credisfactory.workspace = true
outbe-tributefactory.workspace = true
outbe-governance.workspace = true
outbe-teeregistry.workspace = true
outbe-tee.workspace = true
outbe-vote.workspace = true
outbe-update.workspace = true
outbe-agentreward.workspace = true
outbe-metadosis.workspace = true
outbe-validatorset.workspace = true
outbe-consensus.workspace = true
outbe-slashindicator.workspace = true
outbe-staking.workspace = true
outbe-rewards.workspace = true
outbe-fidelity.workspace = true
outbe-promislimit.workspace = true
outbe-oracle.workspace = true
outbe-zerofee.workspace = true
outbe-cycle.workspace = true
outbe-accounting.workspace = true
outbe-zkproof.workspace = true

# Alloy
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-evm.workspace = true

# Signing
hex.workspace = true

# Revm
revm.workspace = true

# Reth
reth-ethereum = { workspace = true, features = [
    "evm",
    "node",
    "node-api",
    "cli",
] }
reth-evm.workspace = true
reth-provider.workspace = true
reth-primitives-traits.workspace = true
reth-rpc-eth-api.workspace = true

alloy-sol-types.workspace = true
eyre.workspace = true
tracing.workspace = true

[dev-dependencies]
outbe-nod = { workspace = true, features = ["test-utils"] }
alloy-eips.workspace = true
alloy-sol-types.workspace = true
outbe-common.workspace = true
outbe-offchain-storage.workspace = true
outbe-primitives = { workspace = true, features = [] }
outbe-validatorset.workspace = true
reth-trie = { workspace = true, features = ["test-utils"] }
k256.workspace = true
proptest.workspace = true
serde_json.workspace = true
tempfile.workspace = true
# proposer/validator determinism test: build a real BLS late-finalize
# credit + committee snapshot to exercise verify+record on both paths.
commonware-cryptography.workspace = true
commonware-consensus.workspace = true
commonware-codec.workspace = true
commonware-utils.workspace = true
commonware-math.workspace = true
rand_core.workspace = true

[package.metadata.cargo-machete]
ignored = ["hex"]

[lints]
workspace = true
