[package]
name = "outbe-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = []
test-support = []

[dependencies]
# Internal
outbe-primitives.workspace = true
outbe-tee.workspace = true
outbe-validatorset.workspace = true
outbe-staking.workspace = true
outbe-rewards.workspace = true
outbe-slashindicator.workspace = true

# Reth
reth-ethereum = { workspace = true, features = ["storage-api"] }

# Alloy
alloy-primitives.workspace = true

# RPC
jsonrpsee.workspace = true

# Utilities
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
eyre.workspace = true

[lints]
workspace = true
