[package]
name = "outbe-txpool"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
# Internal
outbe-primitives.workspace = true
outbe-zerofee.workspace = true

# Reth
reth-chainspec.workspace = true
reth-ethereum = { workspace = true, features = ["node", "cli"] }
reth-evm.workspace = true
reth-node-builder.workspace = true
reth-primitives-traits.workspace = true
reth-storage-api.workspace = true
reth-transaction-pool.workspace = true

# Utilities
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
eyre.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
alloy-sol-types.workspace = true
outbe-oracle.workspace = true
