[package]
name = "outbe-agentreward"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
outbe-macros.workspace = true
outbe-common.workspace = true
outbe-primitives = { workspace = true, features = ["test-utils"] }
outbe-gemfactory.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true

[package.metadata.cargo-machete]
ignored = ["alloy-sol-types"]

[lints]
workspace = true
