[package]
name = "outbe-common"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
outbe-primitives.workspace = true
alloy-primitives.workspace = true
serde.workspace = true
time.workspace = true
ring.workspace = true
hex.workspace = true

[dev-dependencies]
serde_json.workspace = true
