[package]
name = "outbe-credisfactory"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
outbe-macros.workspace = true
outbe-primitives = { workspace = true, features = ["test-utils"] }
outbe-credis.workspace = true
outbe-gratis.workspace = true
outbe-fidelity.workspace = true
outbe-promislimit.workspace = true
outbe-vaultprovider.workspace = true
outbe-oracle.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
thiserror.workspace = true

[dev-dependencies]
outbe-gratisfactory.workspace = true
# Drive the confidential Gratis path in the e2e tests via the in-process enclave
# engine; `test-enclave` is unioned into the gratis dep for test builds.
outbe-gratis = { workspace = true, features = ["test-enclave"] }
outbe-tee.workspace = true
outbe-tee-enclave.workspace = true

[lints]
workspace = true
