[package]
name = "outbe-desis"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
outbe-macros.workspace = true
outbe-primitives.workspace = true
outbe-intexfactory.workspace = true
outbe-promislimit.workspace = true
outbe-oracle.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
thiserror.workspace = true

[dev-dependencies]
outbe-primitives = { workspace = true, features = ["test-utils"] }
