[package]
name = "outbe-e2e"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
outbe-common.workspace = true
outbe-primitives = { workspace = true, features = ["test-utils"] }
outbe-evm.workspace = true
outbe-metadosis.workspace = true
outbe-tribute.workspace = true
outbe-nod.workspace = true
outbe-nodfactory.workspace = true
outbe-gratisfactory.workspace = true
outbe-vaultprovider.workspace = true
# `test-enclave` drives the confidential Gratis mint via the in-process enclave
# engine used by the WWD→…→mineGratis e2e.
outbe-gratis = { workspace = true, features = ["test-enclave"] }
outbe-tee.workspace = true
outbe-tee-enclave.workspace = true
outbe-oracle.workspace = true
outbe-promislimit.workspace = true
outbe-update.workspace = true
outbe-vote.workspace = true
outbe-validatorset.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
