[package]
name = "outbe-e2e"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
outbe-common.workspace = true
outbe-compressed-entities.workspace = true
outbe-offchain-data.workspace = true
outbe-offchain-storage.workspace = true
outbe-primitives = { workspace = true, features = ["test-utils"] }
outbe-evm.workspace = true
outbe-metadosis.workspace = true
outbe-tribute.workspace = true
outbe-nod.workspace = true
outbe-nodfactory.workspace = true
outbe-vaultprovider.workspace = true
outbe-gratis.workspace = true
outbe-oracle.workspace = true
outbe-promislimit.workspace = true
outbe-governance.workspace = true
outbe-update.workspace = true
outbe-vote.workspace = true
outbe-validatorset.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
