[package]
name = "outbe-gemfactory"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
outbe-macros.workspace = true
outbe-primitives.workspace = true
outbe-common.workspace = true
outbe-gem.workspace = true
outbe-promisfactory.workspace = true
outbe-oracle.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
thiserror.workspace = true

[dev-dependencies]
outbe-primitives = { workspace = true, features = ["test-utils"] }
alloy-primitives = { workspace = true, features = ["rand"] }
outbe-promis.workspace = true

[features]
default = []
test-utils = ["outbe-primitives/test-utils"]

[lints]
workspace = true
