[package]
name = "outbe-governance"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
outbe-macros.workspace = true
outbe-primitives.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
thiserror.workspace = true
similar.workspace = true

[dev-dependencies]
alloy-primitives = { workspace = true, features = ["rand"] }

[features]
default = []
test-utils = ["outbe-primitives/test-utils"]

[lints]
workspace = true
