[package]
name = "outbe-governance"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
outbe-macros.workspace = true
outbe-primitives.workspace = true
outbe-vote.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
similar.workspace = true

[dev-dependencies]
alloy-primitives = { workspace = true, features = ["rand"] }
outbe-validatorset.workspace = true

[features]
default = []
test-utils = ["outbe-primitives/test-utils"]

[lints]
workspace = true
