[package]
name = "outbe-gratisfactory"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
outbe-primitives = { workspace = true, features = ["test-utils"] }
outbe-gratis.workspace = true
outbe-promis.workspace = true
outbe-fidelity.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
thiserror.workspace = true

[dev-dependencies]
# Drive the confidential Gratis path in tests via the in-process enclave engine
# (replaces the old gratispool `with_verifier_outcome` stubbing). `test-enclave`
# is unioned into the gratis dep for test builds.
outbe-gratis = { workspace = true, features = ["test-enclave"] }
outbe-tee.workspace = true
outbe-tee-enclave.workspace = true

[lints]
workspace = true
