[package]
name = "outbe-gratispool"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
outbe-macros.workspace = true
outbe-primitives = { workspace = true, features = ["test-utils"] }
outbe-zkproof.workspace = true

alloy-primitives.workspace = true
alloy-sol-types.workspace = true
thiserror.workspace = true

# Poseidon-BN254 over ark_bn254::Fr. Same Circom parameter set used by the
# Noir circuit, so on-chain root recomputation and in-circuit witness agree
# byte-for-byte.
outbe-poseidon.workspace = true
ark-bn254.workspace = true
ark-ff.workspace = true

# UltraHonkKeccak verifier (Barretenberg FFI). SRS is initialised once at
# node startup via `outbe_zkproof::init_crs`; gratispool inherits that
# initialisation and calls `verify_ultra_honk_keccak` directly with the
# canonical COMMITMENT_NULLIFIER verification key from `outbe-zk-canonical`.
outbe-zk-canonical.workspace = true
outbe-zk-circuit-noir.workspace = true

[features]
default = []
# Exposes `verifier::with_verifier_outcome` and forces `verifier::verify` to
# read the thread-local override instead of calling the real Barretenberg
# verifier. Intended for cross-crate test consumers (e.g. credisfactory
# e2e tests); MUST NOT be enabled in production builds.
test-helpers = []

[lints]
workspace = true
